// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CustomShaderMaterialMaster renders code for CustomShaderMaterial 1`] = `
"/*** BEGIN: Varying: v_1 (2) ***/
varying vec3 v_1;
/*** END: Varying: v_1 (2) ***/

void main()
{
  /*** BEGIN: Anonymous vec3 = position (1) ***/
  vec3 vec3_Anonymous_vec3_position_1;
  {
    vec3 value = position;
    vec3_Anonymous_vec3_position_1 = value;
  }
  /*** END: Anonymous vec3 = position (1) ***/

  /*** BEGIN: Varying: v_1 (2) ***/
  vec3 vec3_Varying_v_1_2;
  {
    vec3 source = vec3_Anonymous_vec3_position_1;
    vec3 value = v_1;
    value = v_1 = source;
    vec3_Varying_v_1_2 = value;
  }
  /*** END: Varying: v_1 (2) ***/

  /*** BEGIN: CustomShaderMaterial Master (3) ***/
  bool bool_CustomShaderMaterial_Master_3;
  {
    vec3 position = vec3_Varying_v_1_2;
    vec3 diffuseColor = 
      vec3(
        1.0,
        0.4117647058823529,
        0.7058823529411765
      );
    bool value = true;
    csm_Position = position;
    bool_CustomShaderMaterial_Master_3 = value;
  }
  /*** END: CustomShaderMaterial Master (3) ***/

}"
`;

exports[`CustomShaderMaterialMaster renders code for CustomShaderMaterial 2`] = `
"/*** BEGIN: Varying: v_1 (2) ***/
varying vec3 v_1;
/*** END: Varying: v_1 (2) ***/

void main()
{
  /*** BEGIN: Varying: v_1 (2) ***/
  vec3 vec3_Varying_v_1_2;
  {
    vec3 value = v_1;
    vec3_Varying_v_1_2 = value;
  }
  /*** END: Varying: v_1 (2) ***/

  /*** BEGIN: CustomShaderMaterial Master (3) ***/
  bool bool_CustomShaderMaterial_Master_3;
  {
    vec3 position = vec3_Varying_v_1_2;
    vec3 diffuseColor = 
      vec3(
        1.0,
        0.4117647058823529,
        0.7058823529411765
      );
    bool value = true;
    csm_DiffuseColor = vec4(diffuseColor, 1.0);
    bool_CustomShaderMaterial_Master_3 = value;
  }
  /*** END: CustomShaderMaterial Master (3) ***/

}"
`;
